# cli-minAI

./: .env.example  CNAME  COMMANDS.md  Dockerfile  GOOGLE_SHEETS_ARCHITECTURE.md  GOOGLE_SHEETS_INTEGRATION_COMPLETE.md  GOOGLE_SHEETS_QUICKSTART.md  GOOGLE_SHEETS_SETUP.md  HOW_DATA_IS_STORED.md  README.md  STORAGE_QUICK_REFERENCE.md  ai.js  ai.py  google-apps-script.js  google_sheets_logger.py  index.html  main.py  prompts.py  pyproject.toml  script.js  start.sh  style.css  terminal.js  test_google_sheets.py  vim-editor.js  vim-editor.js.backup
modules/: filesystem.js  parser.js  state.js  ui.js
modules/commands/: content.js  file-system.js  help.js  network.js  registry.js  system.js  utils.js
static/: analytics.js  index.html
